<resources>

    <!-- App name -->
    <string name="app_name">Common Ground</string>

    <string name="form_title">Список пользователей</string>
    <string name="form_title_add_user">Редактирование пользователя</string>
    <string name="avatar_description">Описание аватара</string>
    <string name="change_avatar">Сменить аватар</string>
    <string name="form_password">Пароль</string>
    <string name="form_bio">Биография</string>
    <string name="form_role">Роль</string>
    <string name="button_cancel">Отмена</string>
    <string name="all_real_users">Все существующие пользователи</string>

    <string name="form_name">Авторизация</string>
    <string name="form_first_name">Имя</string>
    <string name="form_last_name">Фамилия</string>
    <string name="form_email">Email</string>
    <string name="form_login">Логин</string>
    <string name="form_password_hash">Пароль</string>

    <!-- Buttons -->
    <string name="button_save_user">Сохранить пользователя</string>
    <string name="button_edit_user">Редактировать пользователя</string>
    <string name="button_delete_user">Удалить пользователя</string>

    <!-- User attributes -->
    <string name="id">ID</string>
    <string name="fist_name">Имя</string>
    <string name="last_name">Фамилия</string>
    <string name="email">Email</string>
    <string name="password">Пароль</string>
    <string name="login">Логин</string>
    <string name="role">Роль</string>

    <string name="login_back">С возвращением! Пожалуйста, войдите чтобы продолжить</string>
    <string name="forgot_password">Забыли пароль?</string>
    <string name="sign_up">Зарегистрироваться</string>
    <string name="Dont_have_an_account">Нет аккаунта?</string>

    <!-- List user items -->
    <string name="list_user_item_login">Логин пользователя</string>
    <string name="list_user_item_created_at">Пользователь создан</string>
    <string name="list_user_item_email">Email пользователя</string>

    <!-- Navigation -->
    <string name="first_fragment_label">Первый фрагмент</string>
    <string name="second_fragment_label">Второй фрагмент</string>
    <string name="next">Далее</string>
    <string name="previous">Назад</string>
    <string name="no_users_found">Пользователи не найдены</string>
    <string name="user_avatar">Аватар пользователя</string>
    <string name="more_actions">Дополнительные действия</string>

    <string name="title_activity_login">Авторизация</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Пароль</string>
    <string name="action_sign_in">Войти или зарегистрироваться</string>
    <string name="action_sign_in_short">Войти</string>
    <string name="welcome">Добро пожаловать!</string>
    <string name="invalid_username">Некорректное имя пользователя</string>
    <string name="invalid_password">Пароль должен содержать более 5 символов</string>
    <string name="login_failed">Ошибка входа</string>

    <!-- Event pages -->
    <string name="event_form_title">Создание события</string>

    <!-- Activity_event_form -->
    <string name="select_date_time">Выбрать дату и время</string>
    <string name="new_event">Новое событие</string>
    <string name="fill_all_fields">Заполните все поля</string>
    <string name="main_info">ОСНОВНАЯ ИНФОРМАЦИЯ</string>
    <string name="event_description">Подробное описание</string>
    <string name="place_and_time">МЕСТО И ВРЕМЯ</string>
    <string name="adress">Адрес</string>
    <string name="date">Дата</string>
    <string name="time">Время</string>
    <string name="categories">КАТЕГОРИИ</string>
    <string name="choose_tags">Выберите теги</string>
    <string name="btn_create">СОЗДАТЬ</string>
    <string name="btn_cancel">ОТМЕНИТЬ</string>
    <string name="btn_delete_event">УДАЛИТЬ СОБЫТИЕ</string>

    <string name="add_user_fab">Создать</string>
    <string name="icon_user">Аватар</string>

    <!-- Technical / non-translatable -->
    <string name="lorem_ipsum" translatable="false">Lorem ipsum dolor sit amet</string>
    <string name="title_activity_test" translatable="false">test</string>

    <string name="action_settings">Настройки</string>

    <string name="events_list">Список мероприятий</string>
    <string name="all_current_events">Все текущие события</string>
    <string name="no_events_found">Мероприятия не найдены</string>

    <string name="tag">Тэг</string>
    <string name="event_name">Название мероприятия</string>
    <string name="event_create_by">Создано</string>
    <string name="icon_event">Список событий</string>
    <string name="add_event_fab">Создать мероприятие</string>
    <string name="date_and_time">Дата и время</string>
    <string name="max_tags">Выбор тегов (макс. 3)</string>

    <string name="save">СОХРАНИТЬ</string>
    <string name="cancel">ОТМЕНИТЬ</string>
    <string name="delete">УДАЛИТЬ</string>
    <string name="back">Назад</string>
    <string name="event">Мероприятие</string>
    <string name="app_logo_desc">Логотип</string>

    <string name="settings_subtitle">Персонализация вашего приложения</string>
    <string name="settings">Настройки</string>
    <string name="your_app_settings">Персонализация вашего приложения</string>
    <string name="personalisation">Персонализация</string>
    <string name="language">Язык</string>
    <string name="ru">RU</string>
    <string name="system">Система</string>
    <string name="notifications">Уведомления</string>
    <string name="about_app">О приложении</string>
    <string name="account">Аккаунт</string>
    <string name="exit">Выйти</string>
    <string name="security">Безопасность</string>
    <string name="change_password">Смена пароля</string>
    <string name="data_recet">Сброс данных</string>
    <string name="create_account">Создать аккаунт</string>
    <string name="already_have_an_account">Уже есть аккаунт?</string>
    <string name="version_1_0_0">Версия: 1.0.0</string>
    <string name="description">Описание</string>
    <string name="about_info_value">Это приложение для управления событиями, пользователями и чатом.</string>
    <string name="developer">Разработчик</string>
    <string name="ark_das_studio">ARK_DAS Studio</string>
    <string name="close">Закрыть</string>
    <string name="old_password">Старый пароль</string>
    <string name="new_password">Новый пароль</string>
    <string name="confirm_new_password">Подтвердите новый пароль</string>
    <string name="edit_profile">Редактирование профиля</string>
    <string name="save_profile">Сохранить профиль</string>
    <string name="community_platform">Community Platform</string>
    <string name="loading">Загрузка</string>
    <string name="profile">Профиль</string>
    <string name="view_profile">Просмотр профиля</string>
    <string name="name">Имя</string>
    <string name="email_example_com">email@example.com</string>
    <string name="about_me">О себе</string>
    <string name="description_user_profile">Описание профиля пользователя</string>
    <string name="date_of_regastration">Дата регистрации</string>
    <string name="registred_15_2023">Зарегистрирован 15 марта 2023 г.</string>
    <string name="confirm_password">Подтвердите пароль</string>

</resources>
