<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="25dp"
    tools:context=".UserForm">
<!--
<{first_name: }>,
<{last_name: }>,
<{email: }>,
<{password_hash: }>,
<{login: }>);
-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/form_textFieldFirstName"
        android:hint="@string/form_first_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"/>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/form_textFieldLastName"
        android:hint="@string/form_last_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"/>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/form_textFieldEmail"
        android:hint="@string/form_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"/>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/form_textFieldLogin"
        android:hint="@string/form_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"/>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/form_textFieldPasswordHash"
        android:hint="@string/form_password_hash"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"/>
    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/form_buttonSave"
        android:text="@string/button_save_user"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</RelativeLayout>