<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="20dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/userListItem_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:text="@string/list_user_item_login"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/userListItem_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:text="@string/list_user_item_email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/userListItem_login"/>

    <TextView
        android:id="@+id/userListItem_created_at"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:text="@string/list_user_item_created_at"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    
    <View
        app:layout_constraintTop_toBottomOf="@id/userListItem_email"
        android:background="@color/mainGreen"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>