<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_margin="12dp"
    app:cardCornerRadius="12dp"
    app:cardElevation="4dp"
    app:cardBackgroundColor="@color/ultraLightPurple">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="12dp"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/event_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/id"
                android:textColor="@color/mainGreen"
                android:textSize="18sp"
                android:textAlignment="center"/>

        </LinearLayout>


        <!-- Информация о мероприятии -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="16dp"
            android:orientation="vertical">

            <!--Название мероприятия-->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:textColor="@color/mainGreen"
                    tools:text="@string/event_name" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
            <TextView
                android:id="@+id/tag_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textColor="@color/mainPurple"
                tools:text="@string/tag" />

            <TextView
                android:id="@+id/tag_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textColor="@color/mainPurple"
                tools:text="@string/tag"
                android:layout_marginStart="4dp"/>

            <TextView
                android:id="@+id/tag_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textColor="@color/mainPurple"
                tools:text="@string/tag"
                android:layout_marginStart="4dp"/>

            </LinearLayout>

            <!-- Дополнительная информация -->
            <TextView
                android:id="@+id/event_create_by"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:paddingHorizontal="8dp"
                android:paddingVertical="2dp"
                android:background="@color/mainGreen"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textAllCaps="true"
                tools:text="@string/event_create_by" />

        </LinearLayout>

        <!-- Кнопка действий -->
        <ImageButton
            android:id="@+id/event_action"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:src="@android:drawable/ic_menu_more"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/more_actions"
            app:tint="@color/white" />

    </LinearLayout>

</androidx.cardview.widget.CardView>